--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: reactdemo
+        working-directory: demosite
 
       - name: Build with Next.js
         run: npm run build
-        working-directory: reactdemo
+        working-directory: demosite
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -46,7 +46,7 @@ jobs:
       - name: Upload statically built files for deployment
         uses: actions/upload-pages-artifact@v3
         with:
-          path: reactdemo/out
+          path: demosite/out
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
